@@ -1,6 +1,6 @@
 
-R Under development (unstable) (2011-12-31 r58017)
-Copyright (C) 2011 The R Foundation for Statistical Computing
+R Under development (unstable) (2012-02-25 r58492)
+Copyright (C) 2012 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 Platform: x86_64-unknown-linux-gnu (64-bit)
 
@@ -3701,7 +3701,7 @@ detaching ‘package:cluster’
 > 
 > asOneSidedFormula("age")
 ~age
-<environment: 0x320d7a8>
+<environment: 0x36d9468>
 > asOneSidedFormula(~ age)
 ~age
 > 
@@ -4762,7 +4762,7 @@ function (V)
     r[cbind(1L:p, 1L:p)] <- 1
     r
 }
-<bytecode: 0x6334758>
+<bytecode: 0x55a1168>
 <environment: namespace:stats>
 > stopifnot(all.equal(Cl, cov2cor(cov(longley))),
 +           all.equal(cor(longley, method="kendall"),
@@ -6762,8 +6762,8 @@ List of 12
 > gf$linkinv
 function (eta) 
 1/eta
-<bytecode: 0x2de1118>
-<environment: 0x96522f0>
+<bytecode: 0x274b8f8>
+<environment: 0x68503c8>
 > gf$variance(-3:4) #- == (.)^2
 [1]  9  4  1  0  1  4  9 16
 > 
@@ -7165,7 +7165,7 @@ attr(,".Environment")
 > environment(as.formula("y ~ x"))
 <environment: R_GlobalEnv>
 > environment(as.formula("y ~ x", env=new.env()))
-<environment: 0x74d7f18>
+<environment: 0x8fbb6e8>
 > 
 > 
 > ## Create a formula for a model with a large number of variables:
@@ -11573,26 +11573,26 @@ attr(,"degree")
 $linkfun
 function (mu) 
 mu
-<bytecode: 0x2de3688>
-<environment: 0x811eeb0>
+<bytecode: 0x274f4e8>
+<environment: 0x6125518>
 
 $linkinv
 function (eta) 
 eta
-<bytecode: 0x2de36f8>
-<environment: 0x811eeb0>
+<bytecode: 0x274d750>
+<environment: 0x6125518>
 
 $mu.eta
 function (eta) 
 rep.int(1, length(eta))
-<bytecode: 0x2de3768>
-<environment: 0x811eeb0>
+<bytecode: 0x274d7c0>
+<environment: 0x6125518>
 
 $valideta
 function (eta) 
 TRUE
-<bytecode: 0x2de3a40>
-<environment: 0x811eeb0>
+<bytecode: 0x274db78>
+<environment: 0x6125518>
 
 $name
 [1] "identity"
@@ -11603,14 +11603,14 @@ attr(,"class")
 $linkfun
 function (mu) 
 mu^lambda
-<bytecode: 0x8120628>
-<environment: 0x8116af0>
+<bytecode: 0x6143d20>
+<environment: 0x5fd5fc8>
 
 $linkinv
 function (eta) 
 pmax(eta^(1/lambda), .Machine$double.eps)
-<bytecode: 0x8120740>
-<environment: 0x8116af0>
+<bytecode: 0x6143e38>
+<environment: 0x5fd5fc8>
 
 > 
 > 
@@ -15267,8 +15267,8 @@ function (v)
     xout = as.double(v), as.integer(length(v)), as.integer(method), 
     as.double(yleft), as.double(yright), as.double(f), NAOK = TRUE, 
     PACKAGE = "stats")$xout
-<bytecode: 0x3826de8>
-<environment: 0x81dbe28>
+<bytecode: 0x3372e10>
+<environment: 0x7497250>
 attr(,"call")
 stepfun(1:3, y0, f = 0)
 > ls(envir = environment(sfun0))
@@ -17343,13 +17343,6 @@ B    L                 27 14 29 19 29 31 41 20 44
 + }
 Loading required package: Matrix
 Loading required package: lattice
-
-Attaching package: ‘Matrix’
-
-The following object(s) are masked from ‘package:base’:
-
-    det
-
     Subj
 Type 1 2 3 4 5 6 7 8 9
   T1 4 4 4 4 4 4 4 4 4
@@ -17491,7 +17484,7 @@ Number of Fisher Scoring iterations: 6
 > ### * <FOOTER>
 > ###
 > cat("Time elapsed: ", proc.time() - get("ptime", pos = 'CheckExEnv'),"\n")
-Time elapsed:  13.648 0.328 14.069 0 0 
+Time elapsed:  13.232 0.256 13.532 0 0 
 > grDevices::dev.off()
 null device 
           1 
